# enstat

./: .gitignore  .pre-commit-config.yaml  .readthedocsenv.yml  README.md  environment.yaml  pyproject.toml  setup.py
.github/workflows/: ci.yml  python-publish.yml
docs/: conf.py  index.rst  module.rst
enstat/: __init__.py  detail.py  mean.py
test/: main.py
tests/: main.py  test_binned.py  test_histogram.py  test_main.py
